--- a/ElearningApp/ElearningApp/ElearningApp.csproj
+++ b/ElearningApp/ElearningApp/ElearningApp.csproj
@@ -8,7 +8,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Guides\**" />
+    <EmbeddedResource Remove="Guides\**" />
+    <None Remove="Guides\**" />
+    <Page Remove="Guides\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Images\ChiliSecurityLogo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\ChiliSecurityLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
