Added logo and optimized some error code for when file is not selected or not named when uploading. Also moved stuff around a bit.

--- a/ElearningApp/ElearningApp/ElearningApp.csproj
+++ b/ElearningApp/ElearningApp/ElearningApp.csproj
@@ -23,9 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Images\ChiliSecurityLogo.png">
+    <Resource Include="Images\ChiliSecurityLogo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </Resource>
   </ItemGroup>
 
 </Project>
